initial html structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <div id="content">
+        <div class="first_step">
+            <div class="step">
+                <span class="number">2</span>
+                <p class="description">Choose the bread art</p>
+            </div>
+            <div class="choose_product">
+                <input type="button" value="weizen">
+                <input type="button" value="vollkorn">
+            </div>
+        </div>
+        <div class="second_step">
+            <div class="step">
+                <span class="number">1</span>
+                <p class="description">Choose your covering</p>
+            </div>
+            <div class="choose_product">
+                
+            </div>
+        </div>
+        <div class="third_step">
+            <div class="step">
+
+            </div>
+            <div class="choose_product">
+                
+            </div>
+        </div>
+    </div>
+</body>
+</html>
