add thank you page

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
         <a href="#toppings" data-ajax="false" onclick="handleDiv('toppings')">Toppings</a>
         <a href="#place_time" data-ajax="false" onclick="handleDiv('place_time');">Place & Time</a>
         <a href="send" data-ajax="false"onclick="sendIt();">Send</a>
-        <img src="assets/logo/pickman.svg" alt="" class="logo">
-        <div id="summary">
-
-        </div>
+        <a href="thankYou.html"><img src="assets/logo/pickman.svg" alt="" class="logo"></a> 
+        
     </div>
     
     <div id="bread" class="active">
